--- a/widescreen.css
+++ b/widescreen.css
@@ -1,17 +1,81 @@
-/* Dropdown Button */
-.dropbtn {
-    background-color: #3498DB;
+* {
+  box-sizing: border-box;
+}
+
+body,html {
+  margin:0;
+  padding:0;
+}
+
+.wrapper{
+  display: flex;
+  flex-wrap: nowrap;
+  /* top: 0;
+  left:0;
+  margin: auto; */
+  width: 100vw;
+  height: 100vh;
+  background-color: aquamarine;
+  /* text-align: center; */
+  
+  /* overflow: hidden; */
+}
+ 
+.content {
+  order: 2;
+  flex: 50vw;
+  /* max-width: 600px; */
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.sidebar{
+  order: 1;
+  flex: 50vw;
+  background-image: url("bottle2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 5px solid black;
+  background-color: rgb(4, 175, 243);
+  padding: 20px;
+}
+
+.side-content {
+  display: block;
+  max-width: 33vw;
+  font-size: 40px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  margin-top: 200px;
+  padding: 60px;
+}
+
+ /* .title {
+  font-size: 2.75rem;
+  padding-top: 5rem;
+  padding-bottom: .25rem;
+  user-select: none;
+}   */
+ /* Dropdown Button */
+ .dropbtn {
+    width: 200px;
+    background-color: rgb(223, 109, 252);
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    margin-top: 30px;
+    /* margin-bottom: 16px; */
+    padding: 8px;
+    font-size: 1.5rem;
     border: none;
     cursor: pointer;
-    border-radius: 8px;
+    border-radius: 4px;
+    box-shadow: 4px 2px 12px black;
   }
   
   /* Dropdown button on hover & focus */
   .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
+    background-color: rgb(204, 0, 255);
   }
   
   /* The container <div> - needed to position the dropdown content */
@@ -22,17 +86,25 @@
   
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
+    left: 0;
+    right: 0;
+    margin: auto;
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
+    background-color: rgb(223, 109, 252);
+    font-size: 1.25rem;
+    max-width: 70%;
+    /* width: auto; */
+    /* min-width: 100px; */
+    border-radius: 4px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
   
   /* Links inside the dropdown */
   .dropdown-content a {
-    color: black;
+    
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -40,10 +112,243 @@
   
   /* Change color of dropdown links on hover */
   .dropdown-content a:hover {
-      background-color: #ddd
+      background-color: rgb(204, 0, 255);
   }
   
   /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
   .show {
       display:block;
+  }
+  
+  .vitamin {
+    margin-top: 16px;
+    width: 100vw;
+    text-align: center;
+    /* border: 2px solid rgb(247, 81, 4);
+    border-radius: 2px; */
+  }
+
+  .dayControls {
+    width: 330px;
+  }
+
+  .day {
+    display:inline-block;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    /* margin-bottom: 20px; */
+    width: 220px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: white;
+    /* padding: .25rem; */
+    padding-top: .25rem;
+    padding-bottom: .25rem;
+    background-color: rgb(138, 111, 138);
+    border-radius: 4px;
+    user-select: none;
+  }
+
+  .left-arrow {
+    position: absolute;
+    display: inline-block;
+    left: 45px;
+    top: 222px;
+    border-color: transparent rgb(138, 111, 138);
+    border-style: solid;
+    border-width: 25px 25px 25px 0px;
+    height: 0px;
+    width: 0px;
+  }
+
+  .left-arrow:hover {
+    position: absolute;
+    display: inline-block;
+    left: 45px;
+    top: 222px;
+    border-color: transparent rgb(143, 132, 143);
+    border-style: solid;
+    border-width: 25px 25px 25px 0px;
+    height: 0px;
+    width: 0px;
+  }
+
+  .prevDayBtn {
+    display: inline;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 10px;
+    width: 50px;
+    text-align: center;
+    font-size: 1.25rem;
+    color: white;
+    padding-top: .5rem;
+    padding-bottom: .25rem;
+    padding-right: .25rem;
+    background-color: rgb(138, 111, 138);
+    border-radius: 4px;
+    user-select: none;
+    border: none;
+    cursor: pointer;
+    box-shadow: 2px 2px 8px black;
+  }
+
+  .prevDayBtn:hover {
+    display: inline;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 10px;
+    width: 50px;
+    text-align: center;
+    font-size: 1.25rem;
+    color: white;
+    padding-top: .5rem;
+    padding-bottom: .25rem;
+    padding-right: .25rem;
+    background-color: rgb(143, 132, 143);
+    border-radius: 4px;
+    user-select: none;
+    border: none;
+    cursor: pointer;
+    box-shadow: 2px 2px 8px black;
+  }
+
+  .right-arrow {
+    position: absolute;
+    display: inline-block;
+    right: 45px;
+    top: 222px;
+    border-color: transparent rgb(138, 111, 138);
+    border-style: solid;
+    border-width: 25px 0px 25px 25px;
+    height: 0px;
+    width: 0px;
+  }
+
+  .right-arrow:hover {
+    position: absolute;
+    display: inline-block;
+    right: 45px;
+    top: 222px;
+    border-color: transparent rgb(143, 132, 143);
+    border-style: solid;
+    border-width: 25px 0px 25px 25px;
+    height: 0px;
+    width: 0px;
+  }
+
+  .nextDayBtn {
+    display: inline;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 10px;
+    width: 60px;
+    text-align: center;
+    font-size: 1.25rem;
+    color: white;
+    padding-top: .5rem;
+    padding-bottom: .25rem;
+    padding-left: .25rem;
+    background-color: rgb(138, 111, 138);
+    border-radius: 4px;
+    user-select: none;
+    border: none;
+    cursor: pointer;
+    box-shadow: 2px 2px 8px black;
+  }
+
+  .nextDayBtn:hover {
+    display: inline;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 10px;
+    width: 60px;
+    text-align: center;
+    font-size: 1.25rem;
+    color: white;
+    padding-top: .5rem;
+    padding-bottom: .25rem;
+    padding-left: .25rem;
+    background-color: rgb(143, 132, 143);
+    border-radius: 4px;
+    user-select: none;
+    border: none;
+    cursor: pointer;
+    box-shadow: 2px 2px 8px black;
+  }
+  
+  .front {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100vw;
+  }
+
+  .front-content {
+    left: 0;
+    right: 0;
+    margin: auto;
+    text-align: center;
+    width: 90%;
+    height: 28%;
+    min-height: 135px;
+    /* padding: 5px; */
+    margin-top: 10px;
+    /* margin-bottom: 20vh; */
+    font-size: 3rem;
+    color: rgb(0, 0, 0);
+    user-select: none;
+    border-radius: 20%/50%;
+    cursor: pointer;
+    box-shadow: 2px 2px 8px black;
+  }
+
+  .scripture {
+    display: none;
+  }
+
+  .showScripture{
+    display: block;
+    font-size: 1.05rem;
+    left: 0;
+    right: 0;
+    margin: auto;
+    text-align: center;
+    padding: 13px;
+    width: 90%;
+    height: 40%;
+    min-height: 150px;
+    margin-top: 2px;
+    /* margin-bottom: 20vh; */
+    color: rgb(0, 0, 0);
+    background-color: white;
+    user-select: none;
+    border-radius: 50vw/50vw;
+    white-space: pre-wrap; /*this will create a new line after the verse */
+    box-shadow: 2px 2px 8px black;
+  }
+
+  .view {
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+
+  .instructions {
+    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+
   }
