--- a/smallscreen.css
+++ b/smallscreen.css
@@ -12,6 +12,7 @@ body,html {
   left:0;
   margin: auto;
   width: 100vw;
+  max-width: 475px;
   height: 100vh;
   background-color: aquamarine;
   text-align: center;
@@ -21,12 +22,54 @@ body,html {
   /* overflow: hidden; */
 }
  
- .title {
-  font-size: 2.75rem;
-  padding-top: 5rem;
-  padding-bottom: .25rem;
-  /* background-color: thistle; */
-  user-select: none;
+.menu {
+  position: absolute;
+  top: 0;
+  left: -65px;
+  width: 200px;
+  height: 40px;
+  padding: 5px;
+  background-color: rgb(252, 159, 38);
+  transform: rotateZ(-45deg);
+  font-size: 1.5rem;
+  z-index: 10;
+}
+
+.info {
+  position: absolute;
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  color: black;
+  font-size: 1.5rem;
+  padding-left: 30px;
+  padding-right: 30px;
+  z-index: 1000;
+}
+
+.closeMenu {
+  position: absolute;
+  bottom: 40px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  display: block;
+  width: 300px;
+  height: 40px;
+  font-size: 1.5rem;
+  background-color: rgb(252, 159, 38);
+  border-radius: 8px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 2000;
+}
+
+.title {
+font-size: 2.75rem;
+padding-top: 5rem;
+padding-bottom: .25rem;
+/* background-color: thistle; */
+user-select: none;
 }  
  /* Dropdown Button */
  .dropbtn {
@@ -92,26 +135,31 @@ body,html {
   
   .vitamin {
     margin-top: 16px;
-    width: 100vw;
+    /* width: 100vw; */
+    max-width: 400px;
     text-align: center;
     /* border: 2px solid rgb(247, 81, 4);
     border-radius: 2px; */
   }
 
   .dayControls {
+    
     width: 330px;
+    max-width: 400px;
   }
 
   .day {
-    display:inline-block;
+    display: inline-block;
     left: 0;
     right: 0;
+    top: 0;
     margin: auto;
     margin-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
     /* margin-bottom: 20px; */
     width: 220px;
+    max-width: 400px;
     text-align: center;
     font-size: 1.5rem;
     color: white;
@@ -128,6 +176,7 @@ body,html {
     display: inline-block;
     left: 45px;
     top: 222px;
+    display: inline-block;
     border-color: transparent rgb(138, 111, 138);
     border-style: solid;
     border-width: 25px 25px 25px 0px;
@@ -136,8 +185,8 @@ body,html {
   }
 
   .left-arrow:hover {
-    position: absolute;
     display: inline-block;
+    position: absolute;
     left: 45px;
     top: 222px;
     border-color: transparent rgb(143, 132, 143);
@@ -194,6 +243,7 @@ body,html {
     display: inline-block;
     right: 45px;
     top: 222px;
+    display: inline-block;
     border-color: transparent rgb(138, 111, 138);
     border-style: solid;
     border-width: 25px 0px 25px 25px;
@@ -202,8 +252,8 @@ body,html {
   }
 
   .right-arrow:hover {
-    position: absolute;
     display: inline-block;
+    position: absolute;
     right: 45px;
     top: 222px;
     border-color: transparent rgb(143, 132, 143);
@@ -260,6 +310,7 @@ body,html {
     flex-direction: column;
     justify-content: center;
     width: 100vw;
+    max-width: 400px;
   }
 
   .front-content {
@@ -321,4 +372,8 @@ body,html {
     right: 0;
     margin: auto;
 
+  }
+
+  .sidebar {
+    display: none;
   }
