--- a/smallscreen.css
+++ b/smallscreen.css
@@ -33,6 +33,7 @@ body,html {
   transform: rotateZ(-45deg);
   font-size: 1.5rem;
   z-index: 10;
+  cursor: pointer;
 }
 
 .info {
@@ -42,7 +43,7 @@ body,html {
   height: 100vh;
   background-color: white;
   color: black;
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   padding-left: 30px;
   padding-right: 30px;
   z-index: 1000;
@@ -50,7 +51,7 @@ body,html {
 
 .closeMenu {
   position: absolute;
-  bottom: 20px;
+  bottom: 40px;
   left: 0;
   right: 0;
   margin: auto;
