--- a/smallscreen.css
+++ b/smallscreen.css
@@ -43,7 +43,7 @@ body,html {
   height: 100vh;
   background-color: white;
   color: black;
-  font-size: 1.35rem;
+  font-size: 1.4rem;
   padding-left: 30px;
   padding-right: 30px;
   z-index: 1000;
@@ -51,7 +51,7 @@ body,html {
 
 .closeMenu {
   position: absolute;
-  bottom: 40px;
+  bottom: 80px;
   left: 0;
   right: 0;
   margin: auto;
@@ -63,6 +63,7 @@ body,html {
   border-radius: 8px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 2000;
+  cursor: pointer;
 }
 
 .title {
