--- a/smallscreen.css
+++ b/smallscreen.css
@@ -33,7 +33,6 @@ body,html {
   transform: rotateZ(-45deg);
   font-size: 1.5rem;
   z-index: 10;
-  cursor: pointer;
 }
 
 .info {
@@ -43,7 +42,7 @@ body,html {
   height: 100vh;
   background-color: white;
   color: black;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   padding-left: 30px;
   padding-right: 30px;
   z-index: 1000;
@@ -51,7 +50,7 @@ body,html {
 
 .closeMenu {
   position: absolute;
-  bottom: 80px;
+  bottom: 40px;
   left: 0;
   right: 0;
   margin: auto;
@@ -63,7 +62,6 @@ body,html {
   border-radius: 8px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 2000;
-  cursor: pointer;
 }
 
 .title {
@@ -373,7 +371,17 @@ user-select: none;
     left: 0;
     right: 0;
     margin: auto;
+    float: right;
 
+  }
+
+  .instructions p {
+    font-size: 1.25rem;
+    font-weight: bold;
+    text-align: left;
+    text-indent: 120px;
+    line-height: .25;
+    color: red;
   }
 
   .sidebar {
