--- a/smallscreen.css
+++ b/smallscreen.css
@@ -33,6 +33,7 @@ body,html {
   transform: rotateZ(-45deg);
   font-size: 1.5rem;
   z-index: 10;
+  cursor: pointer;
 }
 
 .info {
@@ -62,6 +63,7 @@ body,html {
   border-radius: 8px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 2000;
+  cursor: pointer;
 }
 
 .title {
@@ -84,17 +86,20 @@ user-select: none;
     cursor: pointer;
     border-radius: 4px;
     box-shadow: 4px 2px 12px black;
+   cursor: pointer;
   }
   
   /* Dropdown button on hover & focus */
   .dropbtn:hover, .dropbtn:focus {
     background-color: rgb(204, 0, 255);
+    cursor: pointer;
   }
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
     display: inline-block;
+    cursor: pointer;
   }
   
   /* Dropdown Content (Hidden by Default) */
@@ -112,6 +117,7 @@ user-select: none;
     border-radius: 4px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    cursor: pointer;
   }
   
   /* Links inside the dropdown */
@@ -121,16 +127,19 @@ user-select: none;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    cursor: pointer;
   }
   
   /* Change color of dropdown links on hover */
   .dropdown-content a:hover {
       background-color: rgb(204, 0, 255);
+    cursor: pointer;
   }
   
   /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
   .show {
       display:block;
+    cursor: pointer;
   }
   
   .vitamin {
@@ -182,6 +191,7 @@ user-select: none;
     border-width: 25px 25px 25px 0px;
     height: 0px;
     width: 0px;
+    cursor: pointer;
   }
 
   .left-arrow:hover {
@@ -194,6 +204,7 @@ user-select: none;
     border-width: 25px 25px 25px 0px;
     height: 0px;
     width: 0px;
+    cursor: pointer;
   }
 
   .prevDayBtn {
@@ -249,6 +260,7 @@ user-select: none;
     border-width: 25px 0px 25px 25px;
     height: 0px;
     width: 0px;
+    cursor: pointer;
   }
 
   .right-arrow:hover {
@@ -261,6 +273,7 @@ user-select: none;
     border-width: 25px 0px 25px 25px;
     height: 0px;
     width: 0px;
+    cursor: pointer;
   }
 
   .nextDayBtn {
@@ -330,6 +343,7 @@ user-select: none;
     border-radius: 20%/50%;
     cursor: pointer;
     box-shadow: 2px 2px 8px black;
+    cursor: pointer;
   }
 
   .scripture {
@@ -355,6 +369,7 @@ user-select: none;
     border-radius: 50vw/50vw;
     white-space: pre-wrap; /*this will create a new line after the verse */
     box-shadow: 2px 2px 8px black;
+    cursor: pointer;
   }
 
   .view {
