--- a/smallscreen.css
+++ b/smallscreen.css
@@ -83,7 +83,7 @@ user-select: none;
     padding: 8px;
     font-size: 1.5rem;
     border: none;
-    /*cursor: pointer;*/
+    cursor: pointer;
     border-radius: 4px;
     box-shadow: 4px 2px 12px black;
   }
