--- a/widescreen.css
+++ b/widescreen.css
@@ -1,69 +1,137 @@
-* {
-  box-sizing: border-box;
-}
-
-body,html {
-  margin:0;
-  padding:0;
-}
-
-.wrapper{
-  display: flex;
-  flex-wrap: nowrap;
-  /* top: 0;
-  left:0;
-  margin: auto; */
-  width: 100vw;
-  height: 100vh;
-  background-color: aquamarine;
-  /* text-align: center; */
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 900px) {
+  .wrapper {
+    display: flex;  
+    flex-flow: row wrap;
+    font-weight: bold;
+    text-align: center;
+  }
   
-  /* overflow: hidden; */
-}
- 
-.content {
-  order: 2;
-  flex: 50vw;
-  /* max-width: 600px; */
-  left: 0;
-  right: 0;
-  margin: auto;
-}
+  .wrapper > * {
+    padding: 10px;
+    flex: 1 100%;
+  }
+  
+  .menu {
+    display: none;
+  }
 
-.sidebar{
-  order: 1;
-  flex: 50vw;
-  background-image: url("bottle2.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: 5px solid black;
-  background-color: rgb(4, 175, 243);
-  padding: 20px;
-}
+  .title {
+    display: none;
+  }
+  
+  .header {
+    padding: 0;
+    margin: 0;
+    /* background: rgba(4, 252, 210, 0.432); */
+  }
+  
+  /* Add a black background color to the top navigation */
+.topnav {
+    
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: rgba(0, 255, 255, 0.5);
+    color: white;
+  }
 
-.side-content {
-  display: block;
-  max-width: 33vw;
-  font-size: 40px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  margin-top: 200px;
-  padding: 60px;
-}
+  .footer {
+    order: 4;
+    display: none;
+    margin-bottom: 20px;
+    background: lightgreen;
+  }
+  
+  .content {
+    flex: 3 0px;
+    order: 2;
+    text-align: left;
+    /* background: aqua; */
+    background: deepskyblue;
+    height: 100vh;
+  }
+  
+  .nav {
+    flex: 1 0 0;
+    order: 1;
+    background: deepskyblue;
+    height: 100vh;
+    min-width: 470px;
+    background-image: url("assets/bottle2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
- /* .title {
-  font-size: 2.75rem;
-  padding-top: 5rem;
-  padding-bottom: .25rem;
-  user-select: none;
-}   */
- /* Dropdown Button */
- .dropbtn {
-    width: 200px;
+  .sidebar {
+    display: none;
+    /* background: deepskyblue;
+    height: 100vh;
+    min-width: 470px;
+    background-image: url("assets/bottle2.png");
+    background-repeat: no-repeat;
+    background-size: cover; */
+  }
+
+  .bottle {
+    text-align: center;
+    font-size: 2.5rem;
+    padding: 25px;
+    margin-top: 200px;
+    user-select: none;
+  }
+  
+  /* .aside-2 {
+    background: hotpink;
+  } */
+  
+  /* @media all and (min-width: 800px) {
+    .nav { flex: 1 0 0; }
+  } */
+  
+  /* @media all and (min-width: 700px) {
+    .main    { flex: 3 0px; }
+    .nav-1 { order: 1; } 
+    .main    { order: 2; }
+    .aside-2 { order: 3; }
+    .footer  { order: 4; }
+  } */
+  
+
+  body {
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+  }
+  
+  .dropbtn {
+      left: 0;
+      right: 0;
+      margin: auto;
+    text-align: center;
+    width: 80%;
     background-color: rgb(223, 109, 252);
     color: white;
-    margin-top: 30px;
+    margin-top: 10px;
     /* margin-bottom: 16px; */
     padding: 8px;
     font-size: 1.5rem;
@@ -80,25 +148,31 @@ body,html {
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
-    position: relative;
-    display: inline-block;
+      text-align: center;
+    /* position: relative;
+    display: inline-block; */
+    width: 100%;
   }
   
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
+      text-align: center;
     left: 0;
     right: 0;
     margin: auto;
+    margin-top: 15px;
+    margin-left: 48%;
     display: none;
     position: absolute;
     background-color: rgb(223, 109, 252);
     font-size: 1.25rem;
-    max-width: 70%;
+    width: 35%;
+    max-width: 50%;
     /* width: auto; */
     /* min-width: 100px; */
     border-radius: 4px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 200;
   }
   
   /* Links inside the dropdown */
@@ -121,33 +195,40 @@ body,html {
   }
   
   .vitamin {
-    margin-top: 16px;
-    width: 100vw;
+    margin-top: 10px;
+    width: 100%;
+    /* max-width: 400px; */
     text-align: center;
     /* border: 2px solid rgb(247, 81, 4);
     border-radius: 2px; */
   }
 
   .dayControls {
-    width: 330px;
+    
+    width: 100%;
+    max-width: 400px;
+    user-select: none;
   }
 
   .day {
-    display:inline-block;
-    left: 0;
+      position: absolute;
+    display: inline-block;
+    left: 52%;
     right: 0;
+    top: 152px;
     margin: auto;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
+    /* margin-top: 5px; */
+    margin-left: .08%;
+    margin-right: .5%;
     /* margin-bottom: 20px; */
-    width: 220px;
+    width: 70%;
+    max-width: 400px;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: white;
     /* padding: .25rem; */
     padding-top: .25rem;
-    padding-bottom: .25rem;
+    padding-bottom: .5rem;
     background-color: rgb(138, 111, 138);
     border-radius: 4px;
     user-select: none;
@@ -156,150 +237,81 @@ body,html {
   .left-arrow {
     position: absolute;
     display: inline-block;
-    left: 45px;
-    top: 222px;
+    left: 47.5%;
+    top: 152px;
+    display: inline-block;
     border-color: transparent rgb(138, 111, 138);
     border-style: solid;
     border-width: 25px 25px 25px 0px;
-    height: 0px;
-    width: 0px;
+    
+    height: 2px;
+    width: 2px;
+    cursor: pointer;
   }
 
   .left-arrow:hover {
     position: absolute;
     display: inline-block;
-    left: 45px;
-    top: 222px;
+    left: 47.3%;
+    top: 152px;
+    display: inline-block;
     border-color: transparent rgb(143, 132, 143);
     border-style: solid;
     border-width: 25px 25px 25px 0px;
-    height: 0px;
-    width: 0px;
-  }
+    height: 4px;
+    width: 4px;
 
-  .prevDayBtn {
-    display: inline;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 10px;
-    width: 50px;
-    text-align: center;
-    font-size: 1.25rem;
-    color: white;
-    padding-top: .5rem;
-    padding-bottom: .25rem;
-    padding-right: .25rem;
-    background-color: rgb(138, 111, 138);
-    border-radius: 4px;
-    user-select: none;
-    border: none;
-    cursor: pointer;
-    box-shadow: 2px 2px 8px black;
-  }
-
-  .prevDayBtn:hover {
-    display: inline;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 10px;
-    width: 50px;
-    text-align: center;
-    font-size: 1.25rem;
-    color: white;
-    padding-top: .5rem;
-    padding-bottom: .25rem;
-    padding-right: .25rem;
-    background-color: rgb(143, 132, 143);
-    border-radius: 4px;
-    user-select: none;
-    border: none;
-    cursor: pointer;
-    box-shadow: 2px 2px 8px black;
   }
 
   .right-arrow {
-    position: absolute;
+    /* position: absolute; */
     display: inline-block;
-    right: 45px;
-    top: 222px;
+    /* left: 78.8%;*/
+    /* top: 140px; */
+    display: inline-block;
+    margin-top: 30px;
+    margin-left: 460px;
     border-color: transparent rgb(138, 111, 138);
     border-style: solid;
     border-width: 25px 0px 25px 25px;
-    height: 0px;
-    width: 0px;
+    height: 2px;
+    width: 2px;
+    cursor: pointer;
   }
 
   .right-arrow:hover {
-    position: absolute;
+    /* position: absolute; */
     display: inline-block;
-    right: 45px;
-    top: 222px;
+    /* right: 5.3%;
+    top: 152px; */
+    margin-left: 466px;
+    margin-bottom: -2px;
+    display: inline-block;
     border-color: transparent rgb(143, 132, 143);
     border-style: solid;
     border-width: 25px 0px 25px 25px;
-    height: 0px;
-    width: 0px;
-  }
-
-  .nextDayBtn {
-    display: inline;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 10px;
-    width: 60px;
-    text-align: center;
-    font-size: 1.25rem;
-    color: white;
-    padding-top: .5rem;
-    padding-bottom: .25rem;
-    padding-left: .25rem;
-    background-color: rgb(138, 111, 138);
-    border-radius: 4px;
-    user-select: none;
-    border: none;
-    cursor: pointer;
-    box-shadow: 2px 2px 8px black;
-  }
-
-  .nextDayBtn:hover {
-    display: inline;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 10px;
-    width: 60px;
-    text-align: center;
-    font-size: 1.25rem;
-    color: white;
-    padding-top: .5rem;
-    padding-bottom: .25rem;
-    padding-left: .25rem;
-    background-color: rgb(143, 132, 143);
-    border-radius: 4px;
-    user-select: none;
-    border: none;
-    cursor: pointer;
-    box-shadow: 2px 2px 8px black;
+    height: 4px;
+    width: 4px;
   }
   
   .front {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100vw;
-  }
-
-  .front-content {
     left: 0;
     right: 0;
     margin: auto;
+    width: 100%;
     text-align: center;
-    width: 90%;
-    height: 28%;
-    min-height: 135px;
+    max-width: 575px;
+  }
+
+  .front-content {
+    /* left: 0;
+    right: 0;
+    margin: auto; */
+    text-align: center;
+    width: 100%;
+    height: 225px;
+    /* max-height: 250px; */
+    /* min-height: 135px; */
     /* padding: 5px; */
     margin-top: 10px;
     /* margin-bottom: 20vh; */
@@ -309,6 +321,7 @@ body,html {
     border-radius: 20%/50%;
     cursor: pointer;
     box-shadow: 2px 2px 8px black;
+    background: white;
   }
 
   .scripture {
@@ -316,16 +329,17 @@ body,html {
   }
 
   .showScripture{
+    position: relative;
     display: block;
     font-size: 1.05rem;
     left: 0;
     right: 0;
     margin: auto;
     text-align: center;
-    padding: 13px;
-    width: 90%;
-    height: 40%;
-    min-height: 150px;
+    padding: 50px;
+    width: 80%;
+    height: 120px;
+    /* min-height: 135px; */
     margin-top: 2px;
     /* margin-bottom: 20vh; */
     color: rgb(0, 0, 0);
@@ -334,6 +348,8 @@ body,html {
     border-radius: 50vw/50vw;
     white-space: pre-wrap; /*this will create a new line after the verse */
     box-shadow: 2px 2px 8px black;
+    cursor: pointer;
+    z-index: 100;
   }
 
   .view {
@@ -347,8 +363,73 @@ body,html {
   .instructions {
     display: none;
     position: absolute;
-    left: 0;
-    right: 0;
+    left: 50%;
+    top: 250px;
     margin: auto;
 
   }
+
+  .instructions h2 {
+    font-size: 1.25rem;
+    font-weight: bold;
+    text-align: left;
+    text-indent: 170px;
+    line-height: .25;
+    color: red;
+  }
+
+  .instructions p {
+    font-size: 1.15rem;
+    font-weight: bold;
+    text-align: left;
+    text-indent: 100px;
+    line-height: .25;
+    color: red;
+  }
+
+  .letter-button {
+    height: 110px;
+    width: 75px;
+    background: black;
+    position: absolute;
+    left: 480px;
+    right: 0;
+    margin: auto;
+    bottom: 100px;
+    border-radius: 3px;
+    box-shadow: 2px 2px 8px black;
+    cursor: pointer;
+  }
+
+  .page {
+    height: 90px;
+    width: 65px;
+    background: white;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 5px;
+    margin: auto;
+    padding-top: 9px;
+    padding-left: 4px;
+    padding-right: 4px;
+    font-size: 2px;
+  }
+
+  .glass {
+    display: none;
+  }
+  /* .sidebar {
+    display: none;
+  } */
+}
+
+/* ###########################################################################################################################################
+ ########################################################################################################################################### */
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+/* ###########################################################################################################################################
+ ########################################################################################################################################### */
+/* @media only screen and (min-width: 1200px) {
+  
+    
+} */
