--- a/phone.css
+++ b/phone.css
@@ -14,7 +14,7 @@
         left:0;
         margin: auto;
         width: 100vw;
-        max-width: 475px;
+        /*max-width: 475px;*/
         height: 100vh;
         background-color: aquamarine;
         text-align: center;
