--- a/phone.css
+++ b/phone.css
@@ -143,10 +143,27 @@
             background-color: rgb(204, 0, 255);
         }
         
-        /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-        .show {
-            display:block;
-        }
+      .show::-webkit-scrollbar {/*custom scroll bar */
+      width: 1.25rem;
+      }
+
+      .show::-webkit-scrollbar-track {
+        border-radius: 6px; 
+        box-shadow: inset 0 0 6px gray;
+      }
+
+      .show::-webkit-scrollbar-thumb {
+        border-radius: 6px;
+        background-color: rgb(204, 0, 255);
+        /*outline: 1px solid slategray;*/ 
+      }
+
+      /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+      .show {
+          display:block;
+          overflow-y: scroll;
+          box-shadow: 4px 2px 12px black;
+      }
         
         .vitamin {
           margin-top: 16px;
@@ -600,10 +617,27 @@
             background-color: rgb(204, 0, 255);
         }
         
-        /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-        .show {
-            display:block;
-        }
+        .show::-webkit-scrollbar {/*custom scroll bar */
+         width: 1.25rem;
+       }
+
+       .show::-webkit-scrollbar-track {
+         border-radius: 6px; 
+         box-shadow: inset 0 0 6px gray;
+       }
+
+       .show::-webkit-scrollbar-thumb {
+         border-radius: 6px;
+         background-color: rgb(204, 0, 255);
+         /*outline: 1px solid slategray;*/ 
+       }
+
+       /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+       .show {
+           display:block;
+           overflow-y: scroll;
+           box-shadow: 4px 2px 12px black;
+       }
         
         .vitamin {
           margin-top: 16px;
@@ -1052,10 +1086,27 @@
             background-color: rgb(204, 0, 255);
         }
         
-        /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-        .show {
-            display:block;
-        }
+        .show::-webkit-scrollbar {/*custom scroll bar */
+         width: 1.25rem;
+       }
+
+       .show::-webkit-scrollbar-track {
+         border-radius: 6px; 
+         box-shadow: inset 0 0 6px gray;
+       }
+
+       .show::-webkit-scrollbar-thumb {
+         border-radius: 6px;
+         background-color: rgb(204, 0, 255);
+         /*outline: 1px solid slategray;*/ 
+       }
+
+       /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+       .show {
+           display:block;
+           overflow-y: scroll;
+           box-shadow: 4px 2px 12px black;
+       }
         
         .vitamin {
           margin-top: 16px;
