--- a/phone.css
+++ b/phone.css
@@ -122,6 +122,7 @@
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
           max-width: 70%;
+         height: 150%;
           /* width: auto; */
           /* min-width: 100px; */
           border-radius: 4px;
@@ -596,6 +597,7 @@
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
           max-width: 70%;
+         height: 150%;
           /* width: auto; */
           /* min-width: 100px; */
           border-radius: 4px;
@@ -1065,6 +1067,7 @@
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
           max-width: 70%;
+         height: 150%;
           /* width: auto; */
           /* min-width: 100px; */
           border-radius: 4px;
