--- a/phone.css
+++ b/phone.css
@@ -117,6 +117,7 @@
           left: 0;
           right: 0;
           margin: auto;
+          margin-top: 4px;
           display: none;
           position: absolute;
           background-color: rgb(223, 109, 252);
@@ -592,6 +593,7 @@
           left: 0;
           right: 0;
           margin: auto;
+          margin-top: 4px;
           display: none;
           position: absolute;
           background-color: rgb(223, 109, 252);
@@ -1062,6 +1064,7 @@
           left: 0;
           right: 0;
           margin: auto;
+          margin-top: 4px;
           display: none;
           position: absolute;
           background-color: rgb(223, 109, 252);
