--- a/widescreen.css
+++ b/widescreen.css
@@ -168,6 +168,7 @@
     font-size: 1.25rem;
     width: 35%;
     max-width: 50%;
+    height: 150%;
     /* width: auto; */
     /* min-width: 100px; */
     border-radius: 4px;
@@ -189,11 +190,28 @@
       background-color: rgb(204, 0, 255);
   }
   
+  .show::-webkit-scrollbar {/*custom scroll bar */
+    width: 1.25rem;
+  }
+
+  .show::-webkit-scrollbar-track {
+    border-radius: 6px; 
+    box-shadow: inset 0 0 6px gray;
+  }
+
+  .show::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    background-color: rgb(204, 0, 255);
+    /*outline: 1px solid slategray;*/ 
+  }
+
   /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
   .show {
       display:block;
+      overflow-y: scroll;
+      box-shadow: 4px 2px 12px black;
   }
-  
+    
   .vitamin {
     margin-top: 10px;
     width: 100%;
