--- a/phone.css
+++ b/phone.css
@@ -356,6 +356,7 @@
           text-align: center;
           width: 90%;
           height: 28%;
+          max-height: 225px;
           min-height: 135px;
           /* padding: 5px; */
           margin-top: 10px;
