--- a/widescreen.css
+++ b/widescreen.css
@@ -328,7 +328,7 @@
     margin: auto; */
     text-align: center;
     width: 100%;
-    height: 225px;
+    max-height: 225px;
     /* max-height: 250px; */
     /* min-height: 135px; */
     /* padding: 5px; */
