--- a/phone.css
+++ b/phone.css
@@ -355,7 +355,7 @@
           margin: auto;
           text-align: center;
           width: 90%;
-          height: 28%;
+          /*height: 28%;*/
           max-height: 225px;
           min-height: 135px;
           /* padding: 5px; */
@@ -831,7 +831,8 @@
           margin: auto;
           text-align: center;
           width: 90%;
-          height: 28%;
+          /*height: 28%;*/
+          max-height: 225px;
           min-height: 135px;
           /* padding: 5px; */
           margin-top: 10px;
@@ -1303,7 +1304,8 @@
           margin: auto;
           text-align: center;
           width: 90%;
-          height: 28%;
+          /*height: 28%;*/
+          max-height: 225px;
           min-height: 135px;
           /* padding: 5px; */
           margin-top: 10px;
