--- a/widescreen.css
+++ b/widescreen.css
@@ -328,9 +328,9 @@
     margin: auto; */
     text-align: center;
     width: 100%;
-    height: 225px;
-    /* max-height: 250px; */
-    /* min-height: 135px; */
+    /*height: 225px;*/
+    max-height: 225px;
+    min-height: 225px;
     /* padding: 5px; */
     margin-top: 10px;
     /* margin-bottom: 20vh; */
