--- a/phone.css
+++ b/phone.css
@@ -451,7 +451,7 @@
         }
 
         .page {
-          height: 90px;
+          height: 90%;
           width: 65px;
           background: white;
           position: absolute;
@@ -459,12 +459,17 @@
           right: 0;
           top: 5px;
           margin: auto;
-          padding-top: 9px;
-          padding-bottom: 4px;
+          padding-top: 2px;
+          /* padding-bottom: 4px; */
           padding-left: 4px;
           padding-right: 4px;
           font-size: 2px;
           overflow: hidden;
+        }
+
+        .page-title {
+          padding: 4px;
+          font-size: 12px;
         }
 
         .glass {
@@ -926,7 +931,7 @@
   }
 
   .page {
-    height: 90px;
+    height: 90%;
     width: 65px;
     background: white;
     position: absolute;
@@ -934,12 +939,17 @@
     right: 0;
     top: 5px;
     margin: auto;
-    padding-top: 9px;
-    padding-bottom: 4px;
+    padding-top: 2px;
+    /* padding-bottom: 4px; */
     padding-left: 4px;
     padding-right: 4px;
     font-size: 2px;
     overflow: hidden;
+  }
+
+  .page-title {
+    padding: 4px;
+    font-size: 12px;
   }
 
   .glass {
@@ -1399,7 +1409,7 @@
         }
 
         .page {
-          height: 90px;
+          height: 90%;
           width: 65px;
           background: white;
           position: absolute;
@@ -1407,12 +1417,17 @@
           right: 0;
           top: 5px;
           margin: auto;
-          padding-top: 9px;
-          padding-bottom: 4px;
+          padding-top: 2px;
+          /* padding-bottom: 4px; */
           padding-left: 4px;
           padding-right: 4px;
           font-size: 2px;
           overflow: hidden;
+        }
+
+        .page-title {
+          padding: 4px;
+          font-size: 12px;
         }
 
         .glass {
