--- a/tablet.css
+++ b/tablet.css
@@ -922,7 +922,7 @@
         left:0;
         margin: auto;
         width: 100vw;
-        max-width: 475px;
+        max-width: 100vw;
         height: 100vh;
         background-color: aquamarine;
         text-align: center;
