--- a/phone.css
+++ b/phone.css
@@ -967,10 +967,10 @@
         box-sizing: border-box;
       }
       
-      body {
+      /*body {
         height: 100vw;
         transform: rotate(90deg);
-      }
+      }*/
   
       body,html {
         margin:0;
