--- a/phone.css
+++ b/phone.css
@@ -14,7 +14,7 @@
         left:0;
         margin: auto;
         width: 100vw;
-        /*max-width: 475px;*/
+        max-width: 100vw;
         height: 100vh;
         background-color: aquamarine;
         text-align: center;
@@ -499,7 +499,7 @@
         left:0;
         margin: auto;
         width: 100vw;
-        max-width: 475px;
+        max-width: 100vw;
         height: 100vh;
         background-color: aquamarine;
         text-align: center;
@@ -982,7 +982,7 @@
         left:0;
         margin: auto;
         width: 100vw;
-        max-width: 475px;
+        max-width: 100vw;
         height: 100vh;
         background-color: aquamarine;
         text-align: center;
