--- a/phone.css
+++ b/phone.css
@@ -10,6 +10,7 @@
       }
       
       .wrapper{
+        display: flex;
         top: 0;
         left:0;
         margin: auto;
@@ -176,14 +177,14 @@
           border-radius: 2px; */
         }
       
-        .dayControls {
-          
-          width: 330px;
-          max-width: 400px;
+         .day-controls {
+          display: flex;
+          text-align: center;
+          justify-content: center;
         }
       
         .day {
-          display: inline-block;
+          /*display: inline-block;*/
           left: 0;
           right: 0;
           top: 0;
@@ -206,11 +207,10 @@
         }
       
         .left-arrow {
-          position: absolute;
-          display: inline-block;
+          /*position: absolute;*/
+          /*display: inline-block;*/
           left: 45px;
           top: 222px;
-          display: inline-block;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
           border-width: 25px 25px 25px 0px;
@@ -220,8 +220,8 @@
         }
       
         .left-arrow:hover {
-          display: inline-block;
-          position: absolute;
+          /*display: inline-block;*/
+          /*position: absolute;*/
           left: 45px;
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
@@ -274,11 +274,10 @@
         }
       
         .right-arrow {
-          position: absolute;
-          display: inline-block;
+          /*position: absolute;*/
+          /*display: inline-block;*/
           right: 45px;
           top: 222px;
-          display: inline-block;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
           border-width: 25px 0px 25px 25px;
@@ -288,8 +287,8 @@
         }
       
         .right-arrow:hover {
-          display: inline-block;
-          position: absolute;
+          /*display: inline-block;*/
+          /*position: absolute;*/
           right: 45px;
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
