--- a/phone.css
+++ b/phone.css
@@ -494,6 +494,7 @@
       }
       
       .wrapper{
+        display: flex;
         top: 0;
         left:0;
         margin: auto;
@@ -659,14 +660,14 @@
           border-radius: 2px; */
         }
       
-        .dayControls {
-          
-          width: 330px;
-          max-width: 400px;
+        .day-controls {
+          display: flex;
+          text-align: center;
+          justify-content: center;
         }
       
         .day {
-          display: inline-block;
+          /*display: inline-block;*/
           left: 0;
           right: 0;
           top: 0;
@@ -689,11 +690,10 @@
         }
       
         .left-arrow {
-          position: absolute;
-          display: inline-block;
+          /*position: absolute;*/
+          /*display: inline-block;*/
           left: 45px;
           top: 222px;
-          display: inline-block;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
           border-width: 25px 25px 25px 0px;
@@ -702,8 +702,8 @@
         }
       
         .left-arrow:hover {
-          display: inline-block;
-          position: absolute;
+          /*display: inline-block;*/
+          /*position: absolute;*/
           left: 45px;
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
@@ -756,11 +756,10 @@
         }
       
         .right-arrow {
-          position: absolute;
-          display: inline-block;
+          /*position: absolute;*/
+          /*display: inline-block;*/
           right: 45px;
           top: 222px;
-          display: inline-block;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
           border-width: 25px 0px 25px 25px;
@@ -769,8 +768,8 @@
         }
       
         .right-arrow:hover {
-          display: inline-block;
-          position: absolute;
+          /*display: inline-block;*/
+          /*position: absolute;*/
           right: 45px;
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
@@ -977,6 +976,7 @@
       }
       
       .wrapper{
+        display: flex;
         top: 0;
         left:0;
         margin: auto;
@@ -1142,14 +1142,14 @@
           border-radius: 2px; */
         }
       
-        .dayControls {
-          
-          width: 330px;
-          max-width: 400px;
+        .day-controls {
+          display: flex;
+          text-align: center;
+          justify-content: center;
         }
       
         .day {
-          display: inline-block;
+          /*display: inline-block;*/
           left: 0;
           right: 0;
           top: 0;
@@ -1172,11 +1172,10 @@
         }
       
         .left-arrow {
-          position: absolute;
-          display: inline-block;
+          /*position: absolute;*/
+          /*display: inline-block;*/
           left: 45px;
           top: 222px;
-          display: inline-block;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
           border-width: 25px 25px 25px 0px;
@@ -1185,8 +1184,8 @@
         }
       
         .left-arrow:hover {
-          display: inline-block;
-          position: absolute;
+          /*display: inline-block;*/
+          /*position: absolute;*/
           left: 45px;
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
@@ -1239,11 +1238,10 @@
         }
       
         .right-arrow {
-          position: absolute;
-          display: inline-block;
+          /*position: absolute;*/
+          /*display: inline-block;*/
           right: 45px;
           top: 222px;
-          display: inline-block;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
           border-width: 25px 0px 25px 25px;
@@ -1252,8 +1250,8 @@
         }
       
         .right-arrow:hover {
-          display: inline-block;
-          position: absolute;
+          /*display: inline-block;*/
+          /*position: absolute;*/
           right: 45px;
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
