--- a/tablet.css
+++ b/tablet.css
@@ -25,6 +25,10 @@
         /* overflow: hidden; */
       }
        
+      .content {
+         width: 100%;
+      }
+   
       .header {
         display: none;
       }
@@ -86,15 +90,15 @@
       /* background-color: thistle; */
       user-select: none;
       }  
-       /* Dropdown Button */
+        /* Dropdown Button */
        .dropbtn {
-          width: 200px;
+          width: 100%;
           background-color: rgb(223, 109, 252);
           color: white;
-          margin-top: 30px;
+          margin-top: 60px;
           /* margin-bottom: 16px; */
           padding: 8px;
-          font-size: 1.5rem;
+          font-size: 3.5rem;
           border: none;
           cursor: pointer;
           border-radius: 4px;
@@ -495,7 +499,11 @@
         background-size: contain;
         /* overflow: hidden; */
       }
-       
+         
+      .content {
+         width: 100%;
+      }
+   
       .header {
         display: none;
       }
@@ -559,13 +567,13 @@
       }  
        /* Dropdown Button */
        .dropbtn {
-          width: 200px;
+          width: 100%;
           background-color: rgb(223, 109, 252);
           color: white;
-          margin-top: 30px;
+          margin-top: 60px;
           /* margin-bottom: 16px; */
           padding: 8px;
-          font-size: 1.5rem;
+          font-size: 3.5rem;
           border: none;
           cursor: pointer;
           border-radius: 4px;
@@ -966,7 +974,11 @@
         background-size: contain;
         /* overflow: hidden; */
       }
-       
+        
+      .content {
+         width: 100%;
+      }
+    
       .header {
         display: none;
       }
@@ -1022,7 +1034,7 @@
       }
       
       .title {
-      font-size: 2.75rem;
+      font-size: 3.75rem;
       padding-top: 5rem;
       padding-bottom: .25rem;
       /* background-color: thistle; */
@@ -1030,13 +1042,13 @@
       }  
        /* Dropdown Button */
        .dropbtn {
-          width: 200px;
+          width: 100%;
           background-color: rgb(223, 109, 252);
           color: white;
-          margin-top: 30px;
+          margin-top: 60px;
           /* margin-bottom: 16px; */
           padding: 8px;
-          font-size: 1.5rem;
+          font-size: 3.5rem;
           border: none;
           cursor: pointer;
           border-radius: 4px;
