--- a/widescreen.css
+++ b/widescreen.css
@@ -161,13 +161,13 @@
     right: 0;
     margin: auto;
     margin-top: 15px;
-    margin-left: 48%;
+    /*margin-left: 48%;*/
     display: none;
     position: absolute;
     background-color: rgb(223, 109, 252);
     font-size: 1.25rem;
-    width: 35%;
-    max-width: 50%;
+    width: 80%;
+    /*max-width: 50%;*/
     height: 70%;
     /* width: auto; */
     /* min-width: 100px; */
