--- a/widescreen.css
+++ b/widescreen.css
@@ -163,7 +163,7 @@
     margin-top: 15px;
     /*margin-left: 48%;*/
     display: none;
-    position: absolute;
+    /*position: absolute;*/
     background-color: rgb(223, 109, 252);
     font-size: 1.25rem;
     width: 80%;
