--- a/phone.css
+++ b/phone.css
@@ -439,12 +439,12 @@
           height: 100px;
           width: 75px;
           background: black;
-          /*position: absolute;*/
+          position: absolute;
           left: 0;
           right: 0;
           margin: auto;
           margin-top: 10px;
-          bottom: 5px;
+          bottom: 30%;
           border-radius: 3px;
           box-shadow: 2px 2px 8px black;
           cursor: pointer;
@@ -921,12 +921,12 @@
     height: 100px;
     width: 75px;
     background: black;
-    /*position: absolute;*/
+    position: absolute;
     left: 0;
     right: 0;
     margin: auto;
     margin-top: 10px;
-    bottom: 5px;
+    bottom: 30%;
     border-radius: 3px;
     box-shadow: 2px 2px 8px black;
     cursor: pointer;
@@ -1405,12 +1405,12 @@
           height: 100px;
           width: 75px;
           background: black;
-          /*position: absolute;*/
+          position: absolute;
           left: 0;
           right: 0;
           margin: auto;
           margin-top: 10px;
-          bottom: 5px;
+          bottom: 30%;
           border-radius: 3px;
           box-shadow: 2px 2px 8px black;
           cursor: pointer;
